# OTEL

./: README.md  package-lock.json  package.json
JsApp/: README.md  app.js  auto-instrumentation-express.js  auto-instrumentation.js  instrumentation.js  package-lock.json  package.json  tracing.js
JsPrimeApp/: app.js  auto-instrumentation-express.js  package-lock.json  package.json
JsSecondaryApp/: README.md  app.js  auto-instrumentation-express.js  package-lock.json  package.json
PythonPrimeApp/: README.md  app.py  pyproject.toml
PythonPrimeApp/prime_app/: app.py
PythonSecondaryApp/: README.md  app.py  pyproject.toml
PythonSecondaryApp/secondary_app/: app.py
otel-collector/: README.md  docker-compose.yaml  otel-collector-config.yaml
